<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2015 Azmeer Raja

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Know Ar</string>
    <!-- Main Menu button names -->
    <string name="profile">Profile</string>
    <string name="skills">Tech Skills</string>
    <string name="spec">Specialization</string>
    <string name="achi">Projects</string>
    <string name="qual">Qualification</string>
    <string name="exp">Experience</string>
    <string name="ref">References</string>
    <string name="testi">Testimonials</string>
    <string name="contact">Contact</string>
    <string name="fb">Face Ar</string>
    <string name="send_mail">Send Mail</string>
    <string name="call_me">Call Ar</string>
    <string name="mail_me">Mail Ar</string>

    <string name="loading">Loading</string>

    <!-- Error Messages -->
    <string name="error_interenet_connection">Internet connection not available!</string>
    <string name="error_redirection_link">Link not specified!</string>
    <string name="error_parsing">Error occurred while loading data!</string>
    <!-- Navigation menu details -->
    <string name="navigation_instructions">Swipe left or right to navigate between details. Tap to dismiss.</string>
    <string name="navigation_image">Navigation image.</string>


</resources>