<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2015 Raaja Ar

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/skills_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/skills"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/specialization_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/spec"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size"/>

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/projects_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/achi"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/qualification_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/qual"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/work_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/exp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/references_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/ref"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/testimonials_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/testi"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />

            <com.raja.knowme.widgets.AppButton
                android:id="@+id/contact_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_config"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/contact"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mbtn_text_size" />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/white_divider" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/black_divider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:padding="10dp">

        <com.raja.knowme.widgets.AppTextView
            android:id="@+id/main_first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="3dp"
            android:textColor="#212121"
            android:textSize="@dimen/username_text_size"
            android:visibility="gone" />

        <com.raja.knowme.widgets.AppTextView
            android:id="@+id/main_middle_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="3dp"
            android:textColor="#212121"
            android:textSize="@dimen/username_text_size"
            android:visibility="gone" />

        <com.raja.knowme.widgets.AppTextView
            android:id="@+id/main_last_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#212121"
            android:padding="3dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/username_text_size"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>